works on target tablet!

--- a/ka-lite-android/kalite.kv
+++ b/ka-lite-android/kalite.kv
@@ -12,5 +12,8 @@
         BubbleButton:
             text: 'Stop server'
             on_press: app.stop_server()
+        BubbleButton:
+            text: 'Bring webview'
+            on_press: app.start_webview()
     Label:
         text: 'KA Lite test'
