--- a/ka-lite-android/kalite.kv
+++ b/ka-lite-android/kalite.kv
@@ -6,14 +6,12 @@
     Bubble:
         arrow_pos: 'bottom_mid'
         orientation: 'horizontal'
+
         BubbleButton:
-            text: 'Start server'
-            on_press: app.start_server()
+            text: 'Start'
+            on_press: app.start_webview_button()
         BubbleButton:
-            text: 'Stop server'
-            on_press: app.stop_server()
-        BubbleButton:
-            text: 'Bring webview'
-            on_press: app.start_webview()
+            text: 'Exit'
+            on_press: app.quit_app()
     Label:
         text: 'KA Lite test'
