add setting thread number

--- a/ka-lite-android/kalite.kv
+++ b/ka-lite-android/kalite.kv
@@ -13,5 +13,8 @@
         BubbleButton:
             text: 'Exit'
             on_press: app.quit_app()
+        BubbleButton:
+            text: 'set thread numbers'
+            on_press: app.getThreadNum()
     Label:
         text: 'KA Lite test'
