--- a/python-for-android/src/templates/AndroidManifest.tmpl.xml
+++ b/python-for-android/src/templates/AndroidManifest.tmpl.xml
@@ -97,7 +97,8 @@
 
   </application>
 
-  <uses-sdk android:minSdkVersion="{{ args.min_sdk_version }}" android:targetSdkVersion="{{ args.sdk_version }}"/>
+  <!-- <uses-sdk android:minSdkVersion="{{ args.min_sdk_version }}" android:targetSdkVersion="{{ args.sdk_version }}"/> -->
+  <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="{{ args.sdk_version }}"/>
   {% if args.wakelock %}
   <uses-permission android:name="android.permission.WAKE_LOCK" />
   {% endif %}
